# pyrtable

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  make_server_mockup_data.sh  pyproject.toml  setup.py
docs/source/: caching.rst  conf.py  fetchsave.rst  fields.rst  index.rst  intro.rst  queries.rst  record.rst
src/pyrtable/: __init__.py  _baseandtable.py  configutils.py  connectionmanager.py  exceptions.py  filterutils.py  query.py  record.py
src/pyrtable/context/: __init__.py  base.py
src/pyrtable/fields/: __init__.py  attachment.py  base.py  basic.py  recordlink.py  selection.py  valueset.py
src/pyrtable/filters/: __init__.py  base.py  q.py  raw.py
tests/: __init__.py  prepare_test_data.py  q.py  raw.py  server.py  server_data.csv  url.py
tests/apiclient/: __init__.py  apitests.py  utils.py
