[tool.poetry]
name = "pyrtable"
version = "0.10.2"
description = "Django-inspired library to interface with Airtable"
authors = ["Vilar da Camara Neto <vilarneto@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://pyrtable.readthedocs.io/"
repository = "https://github.com/vilarneto/pyrtable"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.8"
deprecated = "*"
requests = "^2.22.0"
simplejson = "^3.16.0"
pyyaml = ">=5.1,<7"

[tool.poetry.dev-dependencies]
ipython = "*"
sphinx = "^4.0.2"
twine = "^4.0.0"
click = ">=7.1.2,<9"
isort = "^5.10.1"

[tool.isort]
multi_line_output = 2
line_length = 120
known_local_folder = ["pyrtable"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
